[gd_scene load_steps=11 format=3 uid="uid://7pxh7is41taa"]

[ext_resource type="Script" path="res://Scenes/CoreScenes/Game/game.gd" id="1_cj0hc"]
[ext_resource type="PackedScene" uid="uid://bwrhsav1b6hkf" path="res://Scenes/CoreScenes/Settings/settings.tscn" id="2_6sjos"]
[ext_resource type="Script" path="res://Scenes/CoreScenes/Game/info_label.gd" id="3_c5jwr"]
[ext_resource type="Script" path="res://Scenes/Dude/dude.gd" id="4_vds23"]
[ext_resource type="PackedScene" uid="uid://b7cybsrtj67rb" path="res://Scenes/Floor/floor.tscn" id="5_78ijm"]
[ext_resource type="PackedScene" uid="uid://pgo07hl7oibs" path="res://Scenes/Bubble/bubble.tscn" id="6_d7gws"]
[ext_resource type="PackedScene" uid="uid://c1efa852smrvt" path="res://Scenes/Arrow/arrow_spawner.tscn" id="7_g3kfm"]
[ext_resource type="PackedScene" uid="uid://cy7vpsr253j7a" path="res://Scenes/CoreScenes/Characters/PlayerCharacter.tscn" id="8_ya1io"]

[sub_resource type="Environment" id="Environment_duak3"]
background_mode = 2
background_energy_multiplier = 16.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hs7sc"]

[node name="Game" type="Node3D"]
script = ExtResource("1_cj0hc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMargin" type="MarginContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="PauseBtn" type="Button" parent="CanvasLayer/PauseMargin"]
layout_mode = 2
text = "Pause
"

[node name="MenuContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingBtn" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Settings
"

[node name="ResumeBtn" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Resume"

[node name="RetryBtn" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Retry"

[node name="QuitBtn" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="Settings" parent="CanvasLayer" instance=ExtResource("2_6sjos")]
offset_left = 266.0
offset_top = 204.0
offset_right = -239.0
offset_bottom = -105.0

[node name="InfoLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -87.5
offset_right = 36.5
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 128
text = "3"
script = ExtResource("3_c5jwr")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.605155, 0.796108, 0, -0.796108, 0.605155, -0.0870547, 11.2931, 8.88654)
environment = SubResource("Environment_duak3")
fov = 70.0

[node name="Dude" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.20861, 1.16749, 0)
mesh = SubResource("CapsuleMesh_hs7sc")
script = ExtResource("4_vds23")

[node name="Floor" parent="." instance=ExtResource("5_78ijm")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.741215, 0.671268, 0, -0.671268, 0.741215, 0, 8.71587, 0)

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.649859, 0.760054, 0, -0.760054, -0.649859, 0, 8.71587, 0)

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.0416141, 0, 0.999134, 0, 1, 0, -0.999134, 0, -0.0416141, 0, 8.71324, 0)

[node name="DirectionalLight3D4" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.108954, 0, -0.994047, 0, 1, 0, 0.994047, 0, 0.108954, 0, 8.73129, 0)

[node name="Bubble1" parent="." instance=ExtResource("6_d7gws")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.26304, 1.29913, 0)
bubble_id = 1

[node name="Bubble2" parent="." instance=ExtResource("6_d7gws")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.26304, 1.29913, 0)
bubble_id = 2

[node name="P1Score" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(5.34818, 0, 0, 0, 3.90564, 0, 0, 0, 1, -1.56582, 2.67892, -7.55133)
text = "0"

[node name="P2Score" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(5.34818, 0, 0, 0, 3.90564, 0, 0, 0, 1, 1.5752, 2.67892, -7.55133)
text = "0"

[node name="ScoreLabel" type="Label3D" parent="."]
transform = Transform3D(3.56239, 0, 0, 0, 3.9527, 0, 0, 0, 0.999198, 0, 4.20922, -7.90994)
text = "Score"

[node name="ArrowSpawner" parent="." instance=ExtResource("7_g3kfm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.449, 0.7, 0)

[node name="ArrowSpawner2" parent="." instance=ExtResource("7_g3kfm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.957, 0.7, -2)
direction = 1

[node name="PlayerCharacter" parent="." instance=ExtResource("8_ya1io")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.05651, 1.4201, 0)
collision_layer = 2
collision_mask = 13

[connection signal="pressed" from="CanvasLayer/PauseMargin/PauseBtn" to="." method="_on_pause_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/SettingBtn" to="." method="_on_setting_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/RetryBtn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="exit_settings" from="CanvasLayer/Settings" to="." method="_on_settings_exit_settings"]
[connection signal="Blow" from="Dude" to="Bubble1" method="_on_dude_blow"]
[connection signal="bubble_exited_area" from="Floor" to="." method="scored"]
[connection signal="bubble_hit" from="Bubble1" to="." method="scored"]
[connection signal="bubble_hit" from="Bubble2" to="." method="scored"]
